--- a/index.html
+++ b/index.html
@@ -7,41 +7,52 @@
 </head>
 <body>
     <div id="container">
-      <div id="steps-navigation">
-        <div class="step">
-          <div class="step-number">1</div>
-          <div class="step-details">
-            <h4>step1</h4>
-            <h3>your info</h4>
-          </div>
+
+        <div id="steps-navigation">
+
+            <div class="step">
+                <div class="step-number">1</div>
+                <div class="step-details">
+                    <h4>step1</h4>
+                    <h3>your info</h4>
+                </div>
+            </div>
+
+            <div class="step">
+                <div class="step-number">2</div>
+                <div class="step-details">
+                    <h4>step2</h4>
+                    <h3>select plan</h4>
+                </div>
+            </div>
+
+            <div class="step">
+                <div class="step-number">3</div>
+                <div class="step-details">
+                    <h4>step3</h4>
+                    <h3>add-ons</h4>
+                </div>
+            </div>
+
+            <div class="step">
+                <div class="step-number">4</div>
+                <div class="step-details">
+                    <h4>step4</h4>
+                    <h3>summary</h4>
+                </div>
+            </div>
+
         </div>
-        <div class="step">
-          <div class="step-number">2</div>
-          <div class="step-details">
-            <h4>step2</h4>
-            <h3>select plan</h4>
-          </div>
+
+        <div id="step-content">
+          
         </div>
-        <div class="step">
-          <div class="step-number">3</div>
-          <div class="step-details">
-            <h4>step3</h4>
-            <h3>add-ons</h4>
-          </div>
+
+        <div id="step-buttons">
+            <div id="go-back">go back</div>
+            <div id="next-step">next step</div>
         </div>
-        <div class="step">
-          <div class="step-number">4</div>
-          <div class="step-details">
-            <h4>step4</h4>
-            <h3>summary</h4>
-          </div>
-        </div>
-      </div>
-      <div id="step-content"></div>
-      <div id="step-buttons">
-        <div id="go-back">go back</div>
-        <div id="next-step">next step</div>
-      </div>
+        
     </div>
 
   Thank you!
