--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Frontend Mentor | Multi-step form</title>
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="container">
@@ -65,7 +67,7 @@
                 </form>
             </div>
 
-            <div class="content">
+            <div class="content not-displayed">
                 <h2>select your plan</h2>
                 <p>you have the option of monthly or yearly billing</p>
                 <div id="plan-selection">
@@ -105,7 +107,7 @@
                 </div>
             </div>
 
-            <div class="content">
+            <div class="content not-displayed">
                 <h2>pick add-ons</h2>
                 <p>add-ons help enhance your gaming experience</p>
                 <div id="add-ons-selection">
@@ -140,7 +142,7 @@
                 </div>
             </div>
 
-            <div class="content">
+            <div class="content not-displayed">
                 <h2>finishing up</h2>
                 <p>double-check everything looks OK before confirming</p>
                 <div id="price-details">
@@ -173,7 +175,7 @@
                 </div>
             </div>            
 
-            <div class="content">
+            <div class="content not-displayed">
               <div id="thanks-icon"></div>
               <h2>thank you!</h2>
               <p>Thanks for confirming your subscription! We hope you have fun 
@@ -183,8 +185,8 @@
         </div>
 
         <div id="step-buttons">
-            <div id="go-back">go back</div>
-            <div id="next-step">next step</div>
+            <div id="go-back" class="hidden">Go Back</div>
+            <div id="next-step">Next Step</div>
         </div>
 
     </div>
