add logic for navigation through the steps

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                 </div>
             </div>            
 
-            <div class="content">
+            <div class="content not-displayed">
                 <div id="thank-you">
                     <div id="thanks-icon"><img src="assets/images/icon-thank-you.svg"></div>
                     <h2>Thank you!</h2>
@@ -192,6 +192,6 @@
         </div>
 
     </div>
-
+<script src="script.js"></script>
 </body>
 </html>
