--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                     <div id="selected-plan">
                         <div>
                           <h3>Arcade (Monthly)</h3>
-                          <h4>Change</h4>
+                          <h4 id="change">Change</h4>
                         </div>
                         <span>$9/mo</span>
                     </div>
