--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="container">
-
+        <button id="fetch">SEND REQUEST</button>
         <div id="steps-navigation">
 
             <div class="step">
